cmake_minimum_required(VERSION 3.1)
add_subdirectory(stub)
add_subdirectory(minimal)
add_subdirectory(resumption-simple)
add_subdirectory(resumption-buffer)
add_subdirectory(config-features)
add_subdirectory(certificates-basic)
add_subdirectory(certificates-advanced)
add_subdirectory(certificates-advanced-fake-dane)
add_subdirectory(tcp-support)
